trying to fix white space at bottom

--- a/world_foundry/client/src/index.css
+++ b/world_foundry/client/src/index.css
@@ -3,7 +3,7 @@
 html {
 	max-height: 100vh;
 	max-width: 100vw;
-	margin-bottom: 0;
+	margin: 0;
 }
 
 body {
